# feast-local-oidc-setup

./: .gitignore  README.md  compose.yml  pyproject.toml
docker/feast/: Dockerfile-feast-duckdb
docker/feast/components/offline-feature-server/: feature_store.yaml
docker/feast/components/online-feature-server/: feature_store.yaml
docker/feast/feature-ops/materialize-features/: feature_store.yaml
docker/feast/feature-ops/register-features/: feature_repo.py  feature_store.yaml
docker/feast/feature-ops/register-features/data/: online.db
docker/keycloak/: realm-export.json
historical-features/: driver_stats.parquet
test-feature-retrieval/: feature_retrieval.py  feature_store.yaml
