[tool.poetry]
name = "feastlocal"
version = "0.1.0"
description = ""
authors = ["boliri <boliri@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
feast = {extras = ["duckdb"], version = "^0.42.0"}
cryptography = "^44.0.0"
duckdb = "^1.1.3"
psycopg = {extras = ["binary"], version = "^3.2.3"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
